// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card renders without crashing 1`] = `
<Connect(Card)
  id="weather"
  title="Weather"
>
  <Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#EAEAEA",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 14,
          "width": 738,
        }
      }
    >
      <Component
        style={
          Object {
            "flex": 4,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 22,
              "fontWeight": "300",
            }
          }
        >
          49.35
          ° in San Diego
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#747678",
              "fontSize": 15,
              "fontWeight": "300",
              "paddingTop": 10,
            }
          }
        >
          Partly Cloudy
        </Text>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://s3-us-west-2.amazonaws.com/ucsd-its-wts/images/v1/weather-icons/partly-cloudy-day.png",
            }
          }
          style={
            Object {
              "height": 68,
              "width": 68,
            }
          }
        />
      </Component>
    </Component>
    <WeatherWeek
      weatherData={
        Object {
          "data": Array [
            Object {
              "apparentTemperatureHigh": 59.24,
              "apparentTemperatureHighTime": 1516917600,
              "apparentTemperatureLow": 47.89,
              "apparentTemperatureLowTime": 1516978800,
              "apparentTemperatureMax": 59.24,
              "apparentTemperatureMaxTime": 1516917600,
              "apparentTemperatureMin": 45.21,
              "apparentTemperatureMinTime": 1516888800,
              "cloudCover": 0.36,
              "dewPoint": 41.18,
              "humidity": 0.67,
              "icon": "partly-cloudy-night",
              "moonPhase": 0.29,
              "ozone": 294.96,
              "precipIntensity": 0.0005,
              "precipIntensityMax": 0.0017,
              "precipIntensityMaxTime": 1516914000,
              "precipProbability": 0.27,
              "precipType": "rain",
              "pressure": 1018.72,
              "summary": "Partly cloudy throughout the day.",
              "sunriseTime": 1516891760,
              "sunsetTime": 1516929338,
              "temperatureHigh": 59.24,
              "temperatureHighTime": 1516917600,
              "temperatureLow": 49.09,
              "temperatureLowTime": 1516978800,
              "temperatureMax": 59.24,
              "temperatureMaxTime": 1516917600,
              "temperatureMin": 45.21,
              "temperatureMinTime": 1516888800,
              "time": 1516867200,
              "uvIndex": 3,
              "uvIndexTime": 1516910400,
              "visibility": 10,
              "windBearing": 295,
              "windGust": 14.63,
              "windGustTime": 1516924800,
              "windSpeed": 3.8,
            },
            Object {
              "apparentTemperatureHigh": 62,
              "apparentTemperatureHighTime": 1517004000,
              "apparentTemperatureLow": 51.5,
              "apparentTemperatureLowTime": 1517061600,
              "apparentTemperatureMax": 62,
              "apparentTemperatureMaxTime": 1517004000,
              "apparentTemperatureMin": 47.89,
              "apparentTemperatureMinTime": 1516978800,
              "cloudCover": 0.08,
              "dewPoint": 41.18,
              "humidity": 0.61,
              "icon": "clear-day",
              "moonPhase": 0.33,
              "ozone": 303.61,
              "precipIntensity": 0.0002,
              "precipIntensityMax": 0.0007,
              "precipIntensityMaxTime": 1516953600,
              "precipProbability": 0.14,
              "precipType": "rain",
              "pressure": 1022.33,
              "summary": "Clear throughout the day.",
              "sunriseTime": 1516978130,
              "sunsetTime": 1517015795,
              "temperatureHigh": 62,
              "temperatureHighTime": 1517004000,
              "temperatureLow": 51.5,
              "temperatureLowTime": 1517061600,
              "temperatureMax": 62,
              "temperatureMaxTime": 1517004000,
              "temperatureMin": 49.09,
              "temperatureMinTime": 1516978800,
              "time": 1516953600,
              "uvIndex": 4,
              "uvIndexTime": 1516996800,
              "visibility": 10,
              "windBearing": 342,
              "windGust": 13.25,
              "windGustTime": 1517011200,
              "windSpeed": 4.68,
            },
            Object {
              "apparentTemperatureHigh": 70.97,
              "apparentTemperatureHighTime": 1517090400,
              "apparentTemperatureLow": 59.61,
              "apparentTemperatureLowTime": 1517130000,
              "apparentTemperatureMax": 70.97,
              "apparentTemperatureMaxTime": 1517090400,
              "apparentTemperatureMin": 51.5,
              "apparentTemperatureMinTime": 1517061600,
              "cloudCover": 0.01,
              "dewPoint": 32.38,
              "humidity": 0.35,
              "icon": "clear-day",
              "moonPhase": 0.36,
              "ozone": 299.03,
              "precipIntensity": 0.0001,
              "precipIntensityMax": 0.0001,
              "precipIntensityMaxTime": 1517040000,
              "precipProbability": 0.1,
              "precipType": "rain",
              "pressure": 1022.65,
              "summary": "Clear throughout the day.",
              "sunriseTime": 1517064498,
              "sunsetTime": 1517102253,
              "temperatureHigh": 70.97,
              "temperatureHighTime": 1517090400,
              "temperatureLow": 59.61,
              "temperatureLowTime": 1517130000,
              "temperatureMax": 70.97,
              "temperatureMaxTime": 1517090400,
              "temperatureMin": 51.5,
              "temperatureMinTime": 1517061600,
              "time": 1517040000,
              "uvIndex": 4,
              "uvIndexTime": 1517083200,
              "visibility": 10,
              "windBearing": 17,
              "windGust": 9.91,
              "windGustTime": 1517097600,
              "windSpeed": 4.83,
            },
            Object {
              "apparentTemperatureHigh": 77.24,
              "apparentTemperatureHighTime": 1517176800,
              "apparentTemperatureLow": 62.72,
              "apparentTemperatureLowTime": 1517234400,
              "apparentTemperatureMax": 77.24,
              "apparentTemperatureMaxTime": 1517176800,
              "apparentTemperatureMin": 59.61,
              "apparentTemperatureMinTime": 1517130000,
              "cloudCover": 0.13,
              "dewPoint": 35.48,
              "humidity": 0.32,
              "icon": "partly-cloudy-day",
              "moonPhase": 0.4,
              "ozone": 299.88,
              "precipIntensity": 0.0001,
              "precipIntensityMax": 0.0002,
              "precipIntensityMaxTime": 1517173200,
              "precipProbability": 0.12,
              "precipType": "rain",
              "pressure": 1021.21,
              "summary": "Partly cloudy in the morning.",
              "sunriseTime": 1517150865,
              "sunsetTime": 1517188711,
              "temperatureHigh": 77.24,
              "temperatureHighTime": 1517176800,
              "temperatureLow": 62.72,
              "temperatureLowTime": 1517234400,
              "temperatureMax": 77.24,
              "temperatureMaxTime": 1517176800,
              "temperatureMin": 59.61,
              "temperatureMinTime": 1517130000,
              "time": 1517126400,
              "uvIndex": 3,
              "uvIndexTime": 1517166000,
              "visibility": 10,
              "windBearing": 41,
              "windGust": 18.35,
              "windGustTime": 1517162400,
              "windSpeed": 7.44,
            },
            Object {
              "apparentTemperatureHigh": 78.42,
              "apparentTemperatureHighTime": 1517263200,
              "apparentTemperatureLow": 61.2,
              "apparentTemperatureLowTime": 1517324400,
              "apparentTemperatureMax": 78.42,
              "apparentTemperatureMaxTime": 1517263200,
              "apparentTemperatureMin": 62.72,
              "apparentTemperatureMinTime": 1517234400,
              "cloudCover": 0.22,
              "dewPoint": 39.93,
              "humidity": 0.36,
              "icon": "partly-cloudy-night",
              "moonPhase": 0.44,
              "ozone": 297.88,
              "precipIntensity": 0,
              "precipIntensityMax": 0.0002,
              "precipIntensityMaxTime": 1517216400,
              "precipProbability": 0,
              "pressure": 1020.66,
              "summary": "Partly cloudy starting in the evening.",
              "sunriseTime": 1517237230,
              "sunsetTime": 1517275169,
              "temperatureHigh": 78.42,
              "temperatureHighTime": 1517263200,
              "temperatureLow": 61.2,
              "temperatureLowTime": 1517324400,
              "temperatureMax": 78.42,
              "temperatureMaxTime": 1517263200,
              "temperatureMin": 62.72,
              "temperatureMinTime": 1517234400,
              "time": 1517212800,
              "uvIndex": 4,
              "uvIndexTime": 1517256000,
              "windBearing": 23,
              "windGust": 14.67,
              "windGustTime": 1517248800,
              "windSpeed": 5.38,
            },
            Object {
              "apparentTemperatureHigh": 74.23,
              "apparentTemperatureHighTime": 1517346000,
              "apparentTemperatureLow": 57.58,
              "apparentTemperatureLowTime": 1517410800,
              "apparentTemperatureMax": 74.23,
              "apparentTemperatureMaxTime": 1517346000,
              "apparentTemperatureMin": 60.47,
              "apparentTemperatureMinTime": 1517382000,
              "cloudCover": 0.87,
              "dewPoint": 40.84,
              "humidity": 0.41,
              "icon": "cloudy",
              "moonPhase": 0.48,
              "ozone": 297.44,
              "precipIntensity": 0.0001,
              "precipIntensityMax": 0.0002,
              "precipIntensityMaxTime": 1517324400,
              "precipProbability": 0.06,
              "precipType": "rain",
              "pressure": 1017.45,
              "summary": "Overcast throughout the day.",
              "sunriseTime": 1517323594,
              "sunsetTime": 1517361627,
              "temperatureHigh": 74.23,
              "temperatureHighTime": 1517346000,
              "temperatureLow": 57.58,
              "temperatureLowTime": 1517410800,
              "temperatureMax": 74.23,
              "temperatureMaxTime": 1517346000,
              "temperatureMin": 60.47,
              "temperatureMinTime": 1517382000,
              "time": 1517299200,
              "uvIndex": 2,
              "uvIndexTime": 1517338800,
              "windBearing": 89,
              "windGust": 7.37,
              "windGustTime": 1517349600,
              "windSpeed": 0.4,
            },
            Object {
              "apparentTemperatureHigh": 67.6,
              "apparentTemperatureHighTime": 1517432400,
              "apparentTemperatureLow": 54.56,
              "apparentTemperatureLowTime": 1517497200,
              "apparentTemperatureMax": 67.6,
              "apparentTemperatureMaxTime": 1517432400,
              "apparentTemperatureMin": 55.29,
              "apparentTemperatureMinTime": 1517464800,
              "cloudCover": 0.67,
              "dewPoint": 47.41,
              "humidity": 0.63,
              "icon": "partly-cloudy-day",
              "moonPhase": 0.51,
              "ozone": 301.94,
              "precipIntensity": 0.0002,
              "precipIntensityMax": 0.0007,
              "precipIntensityMaxTime": 1517468400,
              "precipProbability": 0.08,
              "precipType": "rain",
              "pressure": 1013.54,
              "summary": "Mostly cloudy throughout the day.",
              "sunriseTime": 1517409956,
              "sunsetTime": 1517448085,
              "temperatureHigh": 67.6,
              "temperatureHighTime": 1517432400,
              "temperatureLow": 54.56,
              "temperatureLowTime": 1517497200,
              "temperatureMax": 67.6,
              "temperatureMaxTime": 1517432400,
              "temperatureMin": 55.29,
              "temperatureMinTime": 1517464800,
              "time": 1517385600,
              "uvIndex": 3,
              "uvIndexTime": 1517428800,
              "windBearing": 187,
              "windGust": 9.46,
              "windGustTime": 1517432400,
              "windSpeed": 3.82,
            },
            Object {
              "apparentTemperatureHigh": 65.8,
              "apparentTemperatureHighTime": 1517522400,
              "apparentTemperatureLow": 58.38,
              "apparentTemperatureLowTime": 1517583600,
              "apparentTemperatureMax": 65.8,
              "apparentTemperatureMaxTime": 1517522400,
              "apparentTemperatureMin": 54.56,
              "apparentTemperatureMinTime": 1517497200,
              "cloudCover": 0.29,
              "dewPoint": 50.91,
              "humidity": 0.75,
              "icon": "partly-cloudy-night",
              "moonPhase": 0.55,
              "ozone": 310.59,
              "precipIntensity": 0.0003,
              "precipIntensityMax": 0.0009,
              "precipIntensityMaxTime": 1517475600,
              "precipProbability": 0.18,
              "precipType": "rain",
              "pressure": 1014.97,
              "summary": "Mostly cloudy in the morning.",
              "sunriseTime": 1517496316,
              "sunsetTime": 1517534542,
              "temperatureHigh": 65.8,
              "temperatureHighTime": 1517522400,
              "temperatureLow": 58.38,
              "temperatureLowTime": 1517583600,
              "temperatureMax": 65.8,
              "temperatureMaxTime": 1517522400,
              "temperatureMin": 54.56,
              "temperatureMinTime": 1517497200,
              "time": 1517472000,
              "uvIndex": 4,
              "uvIndexTime": 1517515200,
              "windBearing": 219,
              "windGust": 9.72,
              "windGustTime": 1517518800,
              "windSpeed": 3.12,
            },
          ],
          "icon": "clear-day",
          "summary": "No precipitation throughout the week, with temperatures rising to 78°F on Monday.",
        }
      }
    />
    <withNavigation(SurfButton) />
  </Component>
</Connect(Card)>
`;

exports[`container renders without crashing 1`] = `
<WeatherCard
  actionButton={<withNavigation(SurfButton) />}
  weatherData={
    Object {
      "currently": Object {
        "apparentTemperature": 49.35,
        "cloudCover": 0.29,
        "dewPoint": 37.18,
        "humidity": 0.63,
        "icon": "partly-cloudy-day",
        "nearestStormBearing": 269,
        "nearestStormDistance": 26,
        "ozone": 294.86,
        "precipIntensity": 0,
        "precipProbability": 0,
        "pressure": 1019,
        "summary": "Partly Cloudy",
        "temperature": 49.35,
        "time": 1516898121,
        "uvIndex": 1,
        "visibility": 10,
        "windBearing": 318,
        "windGust": 3.9,
        "windSpeed": 0.45,
      },
      "daily": Object {
        "data": Array [
          Object {
            "apparentTemperatureHigh": 59.24,
            "apparentTemperatureHighTime": 1516917600,
            "apparentTemperatureLow": 47.89,
            "apparentTemperatureLowTime": 1516978800,
            "apparentTemperatureMax": 59.24,
            "apparentTemperatureMaxTime": 1516917600,
            "apparentTemperatureMin": 45.21,
            "apparentTemperatureMinTime": 1516888800,
            "cloudCover": 0.36,
            "dewPoint": 41.18,
            "humidity": 0.67,
            "icon": "partly-cloudy-night",
            "moonPhase": 0.29,
            "ozone": 294.96,
            "precipIntensity": 0.0005,
            "precipIntensityMax": 0.0017,
            "precipIntensityMaxTime": 1516914000,
            "precipProbability": 0.27,
            "precipType": "rain",
            "pressure": 1018.72,
            "summary": "Partly cloudy throughout the day.",
            "sunriseTime": 1516891760,
            "sunsetTime": 1516929338,
            "temperatureHigh": 59.24,
            "temperatureHighTime": 1516917600,
            "temperatureLow": 49.09,
            "temperatureLowTime": 1516978800,
            "temperatureMax": 59.24,
            "temperatureMaxTime": 1516917600,
            "temperatureMin": 45.21,
            "temperatureMinTime": 1516888800,
            "time": 1516867200,
            "uvIndex": 3,
            "uvIndexTime": 1516910400,
            "visibility": 10,
            "windBearing": 295,
            "windGust": 14.63,
            "windGustTime": 1516924800,
            "windSpeed": 3.8,
          },
          Object {
            "apparentTemperatureHigh": 62,
            "apparentTemperatureHighTime": 1517004000,
            "apparentTemperatureLow": 51.5,
            "apparentTemperatureLowTime": 1517061600,
            "apparentTemperatureMax": 62,
            "apparentTemperatureMaxTime": 1517004000,
            "apparentTemperatureMin": 47.89,
            "apparentTemperatureMinTime": 1516978800,
            "cloudCover": 0.08,
            "dewPoint": 41.18,
            "humidity": 0.61,
            "icon": "clear-day",
            "moonPhase": 0.33,
            "ozone": 303.61,
            "precipIntensity": 0.0002,
            "precipIntensityMax": 0.0007,
            "precipIntensityMaxTime": 1516953600,
            "precipProbability": 0.14,
            "precipType": "rain",
            "pressure": 1022.33,
            "summary": "Clear throughout the day.",
            "sunriseTime": 1516978130,
            "sunsetTime": 1517015795,
            "temperatureHigh": 62,
            "temperatureHighTime": 1517004000,
            "temperatureLow": 51.5,
            "temperatureLowTime": 1517061600,
            "temperatureMax": 62,
            "temperatureMaxTime": 1517004000,
            "temperatureMin": 49.09,
            "temperatureMinTime": 1516978800,
            "time": 1516953600,
            "uvIndex": 4,
            "uvIndexTime": 1516996800,
            "visibility": 10,
            "windBearing": 342,
            "windGust": 13.25,
            "windGustTime": 1517011200,
            "windSpeed": 4.68,
          },
          Object {
            "apparentTemperatureHigh": 70.97,
            "apparentTemperatureHighTime": 1517090400,
            "apparentTemperatureLow": 59.61,
            "apparentTemperatureLowTime": 1517130000,
            "apparentTemperatureMax": 70.97,
            "apparentTemperatureMaxTime": 1517090400,
            "apparentTemperatureMin": 51.5,
            "apparentTemperatureMinTime": 1517061600,
            "cloudCover": 0.01,
            "dewPoint": 32.38,
            "humidity": 0.35,
            "icon": "clear-day",
            "moonPhase": 0.36,
            "ozone": 299.03,
            "precipIntensity": 0.0001,
            "precipIntensityMax": 0.0001,
            "precipIntensityMaxTime": 1517040000,
            "precipProbability": 0.1,
            "precipType": "rain",
            "pressure": 1022.65,
            "summary": "Clear throughout the day.",
            "sunriseTime": 1517064498,
            "sunsetTime": 1517102253,
            "temperatureHigh": 70.97,
            "temperatureHighTime": 1517090400,
            "temperatureLow": 59.61,
            "temperatureLowTime": 1517130000,
            "temperatureMax": 70.97,
            "temperatureMaxTime": 1517090400,
            "temperatureMin": 51.5,
            "temperatureMinTime": 1517061600,
            "time": 1517040000,
            "uvIndex": 4,
            "uvIndexTime": 1517083200,
            "visibility": 10,
            "windBearing": 17,
            "windGust": 9.91,
            "windGustTime": 1517097600,
            "windSpeed": 4.83,
          },
          Object {
            "apparentTemperatureHigh": 77.24,
            "apparentTemperatureHighTime": 1517176800,
            "apparentTemperatureLow": 62.72,
            "apparentTemperatureLowTime": 1517234400,
            "apparentTemperatureMax": 77.24,
            "apparentTemperatureMaxTime": 1517176800,
            "apparentTemperatureMin": 59.61,
            "apparentTemperatureMinTime": 1517130000,
            "cloudCover": 0.13,
            "dewPoint": 35.48,
            "humidity": 0.32,
            "icon": "partly-cloudy-day",
            "moonPhase": 0.4,
            "ozone": 299.88,
            "precipIntensity": 0.0001,
            "precipIntensityMax": 0.0002,
            "precipIntensityMaxTime": 1517173200,
            "precipProbability": 0.12,
            "precipType": "rain",
            "pressure": 1021.21,
            "summary": "Partly cloudy in the morning.",
            "sunriseTime": 1517150865,
            "sunsetTime": 1517188711,
            "temperatureHigh": 77.24,
            "temperatureHighTime": 1517176800,
            "temperatureLow": 62.72,
            "temperatureLowTime": 1517234400,
            "temperatureMax": 77.24,
            "temperatureMaxTime": 1517176800,
            "temperatureMin": 59.61,
            "temperatureMinTime": 1517130000,
            "time": 1517126400,
            "uvIndex": 3,
            "uvIndexTime": 1517166000,
            "visibility": 10,
            "windBearing": 41,
            "windGust": 18.35,
            "windGustTime": 1517162400,
            "windSpeed": 7.44,
          },
          Object {
            "apparentTemperatureHigh": 78.42,
            "apparentTemperatureHighTime": 1517263200,
            "apparentTemperatureLow": 61.2,
            "apparentTemperatureLowTime": 1517324400,
            "apparentTemperatureMax": 78.42,
            "apparentTemperatureMaxTime": 1517263200,
            "apparentTemperatureMin": 62.72,
            "apparentTemperatureMinTime": 1517234400,
            "cloudCover": 0.22,
            "dewPoint": 39.93,
            "humidity": 0.36,
            "icon": "partly-cloudy-night",
            "moonPhase": 0.44,
            "ozone": 297.88,
            "precipIntensity": 0,
            "precipIntensityMax": 0.0002,
            "precipIntensityMaxTime": 1517216400,
            "precipProbability": 0,
            "pressure": 1020.66,
            "summary": "Partly cloudy starting in the evening.",
            "sunriseTime": 1517237230,
            "sunsetTime": 1517275169,
            "temperatureHigh": 78.42,
            "temperatureHighTime": 1517263200,
            "temperatureLow": 61.2,
            "temperatureLowTime": 1517324400,
            "temperatureMax": 78.42,
            "temperatureMaxTime": 1517263200,
            "temperatureMin": 62.72,
            "temperatureMinTime": 1517234400,
            "time": 1517212800,
            "uvIndex": 4,
            "uvIndexTime": 1517256000,
            "windBearing": 23,
            "windGust": 14.67,
            "windGustTime": 1517248800,
            "windSpeed": 5.38,
          },
          Object {
            "apparentTemperatureHigh": 74.23,
            "apparentTemperatureHighTime": 1517346000,
            "apparentTemperatureLow": 57.58,
            "apparentTemperatureLowTime": 1517410800,
            "apparentTemperatureMax": 74.23,
            "apparentTemperatureMaxTime": 1517346000,
            "apparentTemperatureMin": 60.47,
            "apparentTemperatureMinTime": 1517382000,
            "cloudCover": 0.87,
            "dewPoint": 40.84,
            "humidity": 0.41,
            "icon": "cloudy",
            "moonPhase": 0.48,
            "ozone": 297.44,
            "precipIntensity": 0.0001,
            "precipIntensityMax": 0.0002,
            "precipIntensityMaxTime": 1517324400,
            "precipProbability": 0.06,
            "precipType": "rain",
            "pressure": 1017.45,
            "summary": "Overcast throughout the day.",
            "sunriseTime": 1517323594,
            "sunsetTime": 1517361627,
            "temperatureHigh": 74.23,
            "temperatureHighTime": 1517346000,
            "temperatureLow": 57.58,
            "temperatureLowTime": 1517410800,
            "temperatureMax": 74.23,
            "temperatureMaxTime": 1517346000,
            "temperatureMin": 60.47,
            "temperatureMinTime": 1517382000,
            "time": 1517299200,
            "uvIndex": 2,
            "uvIndexTime": 1517338800,
            "windBearing": 89,
            "windGust": 7.37,
            "windGustTime": 1517349600,
            "windSpeed": 0.4,
          },
          Object {
            "apparentTemperatureHigh": 67.6,
            "apparentTemperatureHighTime": 1517432400,
            "apparentTemperatureLow": 54.56,
            "apparentTemperatureLowTime": 1517497200,
            "apparentTemperatureMax": 67.6,
            "apparentTemperatureMaxTime": 1517432400,
            "apparentTemperatureMin": 55.29,
            "apparentTemperatureMinTime": 1517464800,
            "cloudCover": 0.67,
            "dewPoint": 47.41,
            "humidity": 0.63,
            "icon": "partly-cloudy-day",
            "moonPhase": 0.51,
            "ozone": 301.94,
            "precipIntensity": 0.0002,
            "precipIntensityMax": 0.0007,
            "precipIntensityMaxTime": 1517468400,
            "precipProbability": 0.08,
            "precipType": "rain",
            "pressure": 1013.54,
            "summary": "Mostly cloudy throughout the day.",
            "sunriseTime": 1517409956,
            "sunsetTime": 1517448085,
            "temperatureHigh": 67.6,
            "temperatureHighTime": 1517432400,
            "temperatureLow": 54.56,
            "temperatureLowTime": 1517497200,
            "temperatureMax": 67.6,
            "temperatureMaxTime": 1517432400,
            "temperatureMin": 55.29,
            "temperatureMinTime": 1517464800,
            "time": 1517385600,
            "uvIndex": 3,
            "uvIndexTime": 1517428800,
            "windBearing": 187,
            "windGust": 9.46,
            "windGustTime": 1517432400,
            "windSpeed": 3.82,
          },
          Object {
            "apparentTemperatureHigh": 65.8,
            "apparentTemperatureHighTime": 1517522400,
            "apparentTemperatureLow": 58.38,
            "apparentTemperatureLowTime": 1517583600,
            "apparentTemperatureMax": 65.8,
            "apparentTemperatureMaxTime": 1517522400,
            "apparentTemperatureMin": 54.56,
            "apparentTemperatureMinTime": 1517497200,
            "cloudCover": 0.29,
            "dewPoint": 50.91,
            "humidity": 0.75,
            "icon": "partly-cloudy-night",
            "moonPhase": 0.55,
            "ozone": 310.59,
            "precipIntensity": 0.0003,
            "precipIntensityMax": 0.0009,
            "precipIntensityMaxTime": 1517475600,
            "precipProbability": 0.18,
            "precipType": "rain",
            "pressure": 1014.97,
            "summary": "Mostly cloudy in the morning.",
            "sunriseTime": 1517496316,
            "sunsetTime": 1517534542,
            "temperatureHigh": 65.8,
            "temperatureHighTime": 1517522400,
            "temperatureLow": 58.38,
            "temperatureLowTime": 1517583600,
            "temperatureMax": 65.8,
            "temperatureMaxTime": 1517522400,
            "temperatureMin": 54.56,
            "temperatureMinTime": 1517497200,
            "time": 1517472000,
            "uvIndex": 4,
            "uvIndexTime": 1517515200,
            "windBearing": 219,
            "windGust": 9.72,
            "windGustTime": 1517518800,
            "windSpeed": 3.12,
          },
        ],
        "icon": "clear-day",
        "summary": "No precipitation throughout the week, with temperatures rising to 78°F on Monday.",
      },
      "latitude": 32.8829929,
      "longitude": -117.2409542,
      "offset": -8,
      "timezone": "America/Los_Angeles",
    }
  }
/>
`;
